# chess-engine-and-ui

./: CMakeLists.txt  README.md  index.html  main.js  package-lock.json  package.json
include/: board.h  chess_engine.h  masking_helpers.h  math_utils.h  move_generation.h  piece.h
src/engine/: CMakeLists.txt  board.cpp  board.h  chess_engine.cpp  chess_interface.cpp  engine_helpers.cpp  masking_helpers.cpp  move_generation.cpp  piece.h
src/frontend/: index.html  style.css
src/main/: main.js
src/math/: CMakeLists.txt  math_utils.cpp
tests/: CMakeLists.txt  newtests.txt  test_chess_engine.cpp  test_engine_helpers.cpp  test_masking_helpers.cpp  test_math_utils.cpp
